--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@next/font": "^14.2.13",
     "@radix-ui/react-hover-card": "^1.1.1",
+    "@react-three/fiber": "^8.17.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.445.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "qss": "^3.0.0",
@@ -25,12 +27,14 @@
     "react-spring": "^9.7.4",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.168.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
