--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
+    "react-scroll": "^1.9.0",
     "react-spring": "^9.7.4",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.5.2",
